# tpuop

./: CMakeLists.txt  README.md  cmodel.cmake  demo_layernorm.py  demo_transpose.py  envsetup.sh  setup.py
device/: CMakeLists.txt  cmodel.cmake  pcie.cmake
device/src/: todo.md  tpu_kernel_batchmatmul.c  tpu_kernel_bcbinary.c  tpu_kernel_cast.c  tpu_kernel_constbinary.c  tpu_kernel_layernorm.c  tpu_kernel_permute.c  tpu_kernel_transpose.c
src/: common.h  help.h  tpu_api_protocol.h  tpu_device_op.h  tpuop.cc
tpuop/: tpuop.py
